<resources>
    <string name="app_name">The gadget finder</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="add_gadget">Add</string>
    <string name="request_failed">Request failed</string>
    <string name="delete_gadget">Delete</string>
</resources>