<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="@dimen/header_text"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--            Username field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/label_text"
                android:layout_gravity="center"
                android:labelFor="@+id/email_edit_txt"
                />
            <EditText
                android:id="@+id/email_edit_txt"
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="dvmena39@gmail.com"
                android:textSize="@dimen/label_text">
            </EditText>
            <TextView
                android:id="@+id/text_input_error_email"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/error_text"/>
            <!--Password field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/label_text"
                android:layout_gravity="center"
                android:labelFor="@+id/password_edit_txt"
                />
            <EditText
                android:id="@+id/password_edit_txt"
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/label_text"
                android:text="123456"
                android:inputType="textPassword">
            </EditText>
            <TextView
                android:id="@+id/text_input_error_password"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/error_text"/>
            <Button
                android:id="@+id/login_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="@dimen/label_text"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/register_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/response_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_text"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>